[project]
name = "nd901-agentic-ai-with-langchain-and-langgraph-project-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.0.8",
    "langchain-core>=1.0.7",
    "langchain-openai>=1.0.3",
    "langgraph>=1.0.3",
    "openai>=2.8.1",
    "print-color>=0.4.6",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "ruff>=0.14.5",
    "ty>=0.0.1a27",
]
